--- a/css/style.css
+++ b/css/style.css
@@ -3779,6 +3779,7 @@ h2.comment_title {
 .blue-magnet .get-started-btn {
 	background-color: #f40303;
 	border-color: #f40303;
+	color: #fff;
 	text-align: center;
 	border-radius: 4px;
 	padding: 10px;
@@ -3803,5 +3804,13 @@ h2.comment_title {
 .blue-magnet .magnet-subtitle .magnet-phone-number {
 	color: #f40303;
 	/* font-weight: bolder; */
+}
+/* .menu {
+	height: 40px;
+	padding: 20px;
+}
+*/
+.menu-el {
+	padding-top: 9px;
 }
 
