--- a/css/style.css
+++ b/css/style.css
@@ -3780,7 +3780,7 @@ h2.comment_title {
 }
 
 .top-menu .phone-request {
-	font-size: 1.04rem;
+	font-size: 1.06rem;
 	text-decoration: underline;
 }
 
@@ -3839,6 +3839,10 @@ h2.comment_title {
 
 	.mobile-hidden {
 		display: none;
+	}
+
+	.menu_open {
+		margin-top: 85px !important;
 	}
 } 
 
