--- a/css/style.css
+++ b/css/style.css
@@ -3882,6 +3882,30 @@ h2.comment_title {
 	font-size: 1rem !important;
 }
 
+.custom-card {
+	border: 1px solid #4d1d4d;
+	border-radius: 2px;
+	text-align: center;
+	height: 23.5rem;
+	padding-top: 2rem; 
+	padding-left: 1.8rem;
+	padding-right: 1.8rem;
+}
+
+.custom-border svg{
+	fill: #4d1d4d;
+	margin-bottom: 15px;
+	margin-top: 18px;
+}
+
+.custom-border .custom-border-wrapper {
+	margin-left: 4.8rem;
+	margin-right: 4.8rem;
+	border: 2px solid #4d1d4d;
+	border-radius: 5px;
+	margin-bottom: 30px;
+}
+
 @media(max-width: 991px){
 	.nc_navigations ul > li i {
 		margin-top: 7px;
