--- a/css/style.css
+++ b/css/style.css
@@ -3899,8 +3899,9 @@ h2.comment_title {
 }
 
 .custom-border .custom-border-wrapper {
-	margin-left: 4.8rem;
-	margin-right: 4.8rem;
+	margin-left: auto;
+	margin-right: auto;
+	width: 5rem;
 	border: 2px solid #4d1d4d;
 	border-radius: 5px;
 	margin-bottom: 30px;
