--- a/css/style.css
+++ b/css/style.css
@@ -3886,10 +3886,10 @@ h2.comment_title {
 	border: 1px solid #4d1d4d;
 	border-radius: 2px;
 	text-align: center;
-	height: 23.5rem;
+	height: 25rem;
 	padding-top: 2rem; 
-	padding-left: 1.8rem;
-	padding-right: 1.8rem;
+	padding-left: 2rem;
+	padding-right: 2rem;
 }
 
 .custom-border svg{
@@ -3904,7 +3904,7 @@ h2.comment_title {
 	width: 5rem;
 	border: 2px solid #4d1d4d;
 	border-radius: 5px;
-	margin-bottom: 30px;
+	margin-bottom: 40px;
 }
 
 @media(max-width: 991px){
@@ -3925,6 +3925,11 @@ h2.comment_title {
 
 	.map-responsive {
 		padding-bottom: 40%;
+	}
+
+	.custom-card {
+		margin-top: 16px;
+		margin-bottom: 16px;
 	}
 } 
 
